# nntrainer

./: .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: qodana_code_quality.yml
Applications/: meson.build
Applications/CausalLM/: MainActivity.kt  causal_lm.cpp  causal_lm.h  deepseek_v2_lite_causallm.cpp  deepseek_v2_lite_causallm.h  main.cpp  meson.build
Applications/CausalLM/layers/: deepseek_moe_layer.cpp  deepseek_moe_layer.h  embedding_layer.cpp  embedding_layer.h  meson.build  mha_core.cpp  mha_core.h  mla_core.cpp  mla_core.h  qwen_moe_layer_cached.cpp  qwen_moe_layer_cached.h  tie_word_embedding.cpp
Applications/FELICE_FSU/: meson.build
Applications/FELICE_FSU/Gauss2_3.5b/: gauss.cpp  gauss.hpp  llm_util.hpp  main.cpp  meson.build
Applications/FELICE_FSU/custom_layers/: custom_common_properties.h  custom_dot_wrapper.cpp  custom_dot_wrapper.h  custom_fc_lora_layer.cpp  custom_fc_lora_layer.h  custom_mha_core_layer.cpp  custom_mha_core_v2_layer.cpp  custom_mha_core_v2_layer.h  custom_qkv_layer.cpp  custom_qkv_layer.h  custom_rms_norm.cpp  custom_rms_norm.h  custom_swiglu.cpp  custom_swiglu.h  custom_tie_word_embedding_layer.cpp  custom_tie_word_embedding_layer.h  meson.build
Applications/SimpleFC/jni/: main.cpp
Applications/utils/llm_tokenizer/: meson.build
docs/hotdoc/theme/extra/css/: extra_frontend.css
jni/: Android.mk.in  meson.build  prepare_ggml.sh
nntrainer/: cl_buffer_manager.h  engine.cpp  engine.h  meson.build
nntrainer/layers/: layer_devel.h  layer_node.cpp  layer_node.h
nntrainer/models/: neuralnet.cpp
nntrainer/tensor/: cache_loader.h  cache_pool.cpp  cache_pool.h  float_tensor.cpp  fsu_weight_pool.cpp  fsu_weight_pool.h  manager.cpp  memory_pool.cpp  memory_pool.h  meson.build  swap_device.cpp  swap_device.h  tensor.cpp  tensor.h  tensor_pool.cpp
nntrainer/tensor/cpu_backend/: cpu_backend.h
nntrainer/tensor/cpu_backend/arm/: arm_compute_backend.h  arm_compute_backend_fp16.cpp  neon_impl.h  neon_impl_fp16.cpp
nntrainer/tensor/cpu_backend/x86/: x86_compute_backend_fp16.cpp
test/jni/: Android.mk  meson.build
test/unittest/layers/: meson.build
test/unittest/memory/: meson.build  unittest_cache_pool_fsu.cpp
tools/: package_android.sh
